# mvcr-application-checker

./: .env.sample  .gitignore  CHANGELOG.md  Dockerfile_bot  Dockerfile_fetcher  LICENSE  README.md  bot.sample.env  docker-compose-bot.yaml  docker-compose-core.yaml  docker-compose-fetcher.yaml  fetcher.sample.env  postgres.sample.env  pyproject.toml  rabbit.sample.env  requirements-bot.txt  requirements-fetcher.txt  requirements.txt  setup.cfg  tox-docker.ini  tox.ini
.github/workflows/: build-image-bot.yml  build-image-fetcher.yml  build-images.yml  codeql.yml  python-package.yml
conf/: rabbitmq-server.conf
db-init-scripts/: init.sql
docs/: development.md
k8s/: bot.sample.yaml  fetcher.sample.yaml
src/bot/: __main__.py  database.py  handlers.py  loader.py  metrics.py  monitor.py  rabbitmq.py  statistics.py  telegram_bot.py  tracing.py  utils.py
src/bot/texts/: __init__.py  buttons.json  messages.json
src/bot/texts/CZ/: buttons.json  commands.json  messages.json
src/bot/texts/EN/: buttons.json  commands.json  messages.json
src/bot/texts/RU/: buttons.json  commands.json  messages.json
src/bot/texts/UA/: buttons.json  commands.json  messages.json
src/db/: database.py
src/fetcher/: __main__.py  application_processor.py  browser.py  config.py  fetcher.py  messaging.py  metrics_collector.py
src/message_queue/: rabbitmq.py
src/scheduler/: monitor.py
src/tests/: test_bot.py  test_browser_single_submit.py  test_fetcher_browser_load.py
src/utils/: __init__.py
ssl/: README.md
utils/: backup_db.sh  extract_chrome_cookies.py
