[metadata]
name = mvcr-application-checker
version = 1.0.1
description = A tool to automatically check Czech Ministry of Interior applications
author = Oleg Basov
author_email = olegeech@sytkovo.su
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/olegeech-me/mvcr-application-checker
project_urls =
    Bug Tracker = https://github.com/olegeech-me/mvcr-application-checker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
